--- a/config
+++ b/config
@@ -2,3 +2,5 @@
 FANDAL=work/a8_fandal_cz
 ATRDIR=work/16M/
 MYPICO=MyPicoDos406S1
+MAXSIZE=16360               # Max disk size
+FMAX=62                     # Max files per directory
